@@ -635,7 +635,6 @@ INPUT                  = doxygen-mainpage \
                          test_c \
                          test_regress \
                          test_sc \
-                         test_sp \
                          test_v \
                          test_verilated
 
