@@ -1,8 +1,0 @@
-*.old
-*.dmp
-*.log
-*.csrc
-*.vcd
-obj_*
-logs
-project
